--- a/angularapp1/src/app/course/course.component.html
+++ b/angularapp1/src/app/course/course.component.html
@@ -27,7 +27,7 @@
       <li class="active"><a routerLink="/course">Course</a></li>
       <li><a routerLink="/institute">Academy</a></li>
       <li><a routerLink="/student">Student</a></li>
-      <li><a routerLink="/userreview">Review</a></li>
+      <li><a routerLink="/adminreview">Review</a></li>
 
       <li>
         <a routerLink="/login" style="float: right"
